--- a/index.html
+++ b/index.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title> AStro </title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+	<link rel="stylesheet" href="css/main.css">
+	<title> Astro </title>
 </head>
 <body>
-	
+
+	<div class="row">
+		<div class="col s12 m12 fondo valign-wrapper">
+			<div class="col s12 m12">
+					<div class=" col s12 m4 img-principal ">
+					</div>
+				<div class="col s12 m7 texto-principal valign-wrapper center-align">
+					<p class="texto">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam cumque reiciendis odio voluptatem assumenda, ratione numquam, consequatur in consequuntur repellendus eveniet fuga voluptas totam voluptatum laborum. Laudantium saepe iusto maxime. 
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum assumenda, odio est odit libero repellat accusantium quas perferendis cumque eius molestias natus, iste laboriosam sint, dolor pariatur. Sed, excepturi eius!
+					</p>
+				</div>
+			
+			</div>	
+		</div>
+	</div>
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
