--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 	<title> Astro </title>
 </head>
 <body>
-	  <nav>
+	<!-- Nav DESKTOP -->
+	<nav>
+		<a href="#" class="sidenav-trigger " data-target="menu-side">
+			<i class="material-icons show-on-small">menu</i>
+		</a>
 	    <div class="nav-wrapper">
 	      <a href="#" class="brand-logo">Logo</a>
 	      <ul id="nav-mobile" class="right hide-on-med-and-down">
@@ -19,7 +23,27 @@
 	        <li><a href="#contacto">Contacto</a></li>
 	      </ul>
 	    </div>
-	  </nav>
+	</nav>
+	<!-- Nav mobile -->
+	<ul id="menu-side" class="sidenav">
+	    <li>
+	    	<div class="user-view">
+		      <div class="background">
+		        <img src="images/office.jpg">
+		      </div>
+		      <a href="#user"><img class="circle" src="images/yuna.jpg"></a>
+		      <a href="#name"><span class="white-text name">John Doe</span></a>
+		      <a href="#email"><span class="white-text email">jdandturk@gmail.com</span></a>
+		    </div>
+		</li>
+	    <li>
+	    	<a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a>
+	    </li>
+	    <li><a href="#!">Second Link</a></li>
+	    <li><a class="subheader">Subheader</a></li>
+	    <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
+	</ul>
+	<!-- ABOUT -->
 	<div id="yo" class="row">
 		<div class="col s12 m12 fondo valign-wrapper">
 			<div class="col s12 m12">
@@ -36,7 +60,7 @@
 	</div>
 	<!-- CONTACTO -->
 	<div id="contacto">
-		<h2 class="center-align"> Trabajemos juntos</h2>
+		<h2 class="col s12 m12 center-align"> Trabajemos juntos</h2>
 		<div class="row center-align">
 			<div class="col s4 m4">
 				<a href="http://www.google.com"><i class="large material-icons">insert_chart</i></a>
@@ -59,5 +83,6 @@
     </footer>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+	<script src="js/app.js"></script>
 </body>
 </html>
