crea la parte de proyectos

--- a/index.html
+++ b/index.html
@@ -50,14 +50,67 @@
 					<div class=" col s12 m4 img-principal ">
 					</div>
 				<div class="col s12 m7 texto-principal valign-wrapper center-align">
-					<p class="texto">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam cumque reiciendis odio voluptatem assumenda, ratione numquam, consequatur in consequuntur repellendus eveniet fuga voluptas totam voluptatum laborum. Laudantium saepe iusto maxime. 
+					<p class="texto">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam cumque reiciendis odio voluptatem assumenda, ratione numquam, consequatur in consequuntur repellendus eveniet fuga voluptas totam voluptatum laborum. Laudantium saepe iusto maxime.
 					Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum assumenda, odio est odit libero repellat accusantium quas perferendis cumque eius molestias natus, iste laboriosam sint, dolor pariatur. Sed, excepturi eius!
 					</p>
 				</div>
-			
-			</div>	
+
+			</div>
 		</div>
 	</div>
+
+	<!-- PROYECTOS-->
+	<section class="container">
+		<h2 class="col s12 m12 center-align"> Proyectos</h2>
+		<div class="row">
+			<div class="col s12 m4">
+				<div class="card">
+					<div class="card-image">
+						<img src="./assets/img/astro5.jpg">
+					</div>
+					<div class="card-content">
+						<p>I am a very simple card. I am good at containing small bits of information.
+						I am convenient because I require little markup to use effectively.</p>
+					</div>
+					<div class="card-action center-align">
+						<a href="#" class="btn-small waves-effect waves-light">Demo</a>
+						<a href="#" class="btn-small waves-effect waves-light ">Code</a>
+					</div>
+				</div>
+			</div>
+			<div class="col s12 m4">
+				<div class="card">
+					<div class="card-image">
+						<img src="./assets/img/astro4.jpg">
+					</div>
+					<div class="card-content">
+						<p>I am a very simple card. I am good at containing small bits of information.
+						I am convenient because I require little markup to use effectively.</p>
+					</div>
+					<div class="card-action center-align">
+						<a href="#" class="btn-small waves-effect waves-light">Demo</a>
+						<a href="#" class="btn-small waves-effect waves-light ">Code</a>
+					</div>
+				</div>
+			</div>
+			<div class="col s12 m4">
+				<div class="card">
+					<div class="card-image">
+						<img src="./assets/img/astro2.jpg">
+					</div>
+					<div class="card-content">
+						<p>I am a very simple card. I am good at containing small bits of information.
+						I am convenient because I require little markup to use effectively.</p>
+					</div>
+					<div class="card-action center-align">
+						<a href="#" class="btn-small waves-effect waves-light">Demo</a>
+						<a href="#" class="btn-small waves-effect waves-light">Code</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
 	<!-- CONTACTO -->
 	<div id="contacto">
 		<h2 class="col s12 m12 center-align"> Trabajemos juntos</h2>
