--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 	    <li>
 	    	<div class="user-view">
 		      <div class="background">
-		        <img src="images/office.jpg">
+		        <img src="assets/img/atardecer.jpg">
 		      </div>
-		      <a href="#user"><img class="circle" src="images/yuna.jpg"></a>
-		      <a href="#name"><span class="white-text name">John Doe</span></a>
-		      <a href="#email"><span class="white-text email">jdandturk@gmail.com</span></a>
+		      <a href="#user"><img class="circle" src="assets/img/astro4.jpg"></a>
+		      <a href="#name"><span class="blue-text name">Astro Lomito</span></a>
+		      <a href="#email"><span class="gray-text email">lomitosuabe@guaf.mx</span></a>
 		    </div>
 		</li>
 	    <li>
@@ -60,16 +60,13 @@
 	</div>
 	<!-- CONTACTO -->
 	<div id="contacto">
-		<h2 class="col s12 m12 center-align"> Trabajemos juntos</h2>
-		<div class="row center-align">
-			<div class="col s4 m4">
-				<a href="http://www.google.com"><i class="large material-icons">insert_chart</i></a>
-			</div>
-			<div class="col s4 m4">
-				<a href="http://www.github.com"><i class="large material-icons">ilocal_phone</i></a>
-			</div>
-			<div class="col s4 m4">
+		<h3 class="col s10 offset-s1 m12 center-align"> Trabajemos juntos</h3>
+		<div class="row ">
+			<div class="col s6 m6 center-align">
 				<a href="http://www.linkedin.com"><i class="large material-icons">email</i></a>
+			</div>
+			<div class="col s6 m6 center-align">
+				<a href="http://www.github.com"><i class="large material-icons">local_phone</i></a>
 			</div>
 		</div>
 	</div>
@@ -77,7 +74,7 @@
 	 <footer class="page-footer">
         <div class="footer-copyright">
             <div class="container center-align">
-            	Astro
+            	Astro Lomito Suabe
             </div>
         </div>
     </footer>
